# vosk-flutter

./: .gitignore  .metadata  .pubignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  build.yaml  pubspec.yaml
.fvm/: fvm_config.json
.github/workflows/: android_integration.yml  vosk_flutter.yml
.github/workflows/scripts/: android_integration_test.sh  install_flutter.sh
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/org/vosk/vosk_flutter/: FlutterRecognitionListener.java  TaskRunner.java  VoskFlutterPlugin.java
android/src/main/java/org/vosk/vosk_flutter/exceptions/: MissingRequiredArgument.java  RecognizerNotFound.java  SpeechServiceNotFound.java  WrongArgumentTypeException.java
android/src/main/java/org/vosk/vosk_flutter_plugin/: ArgumentNotFoundException.java  FlutterRecognitionListener.java  MissingRequiredArgument.java  RecognizerNotFound.java  SpeechRecognition.java  TaskRunner.java  VoskFlutterPlugin.java  WrongArgumentTypeException.java  WrongTypeException.java
example/: .gitignore  README.md  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle  google-services.json
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/profile/: AndroidManifest.xml
example/integration_test/: android_test.dart  common_test.dart  vosk_flutter_plugin_test.dart  vosk_flutter_test.dart
example/lib/: home.dart  main.dart  test_screen.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/test/: widget_test.dart
example/test_driver/: test_driver.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: vosk_flutter.dart  vosk_flutter_plugin.dart
lib/src/: SpeakerModel.dart  generated_vosk_bindings.dart  model.dart  model_loader.dart  recognizer.dart  speech_service.dart  utils.dart  vosk_flutter.dart  vosk_flutter_plugin.dart
lib/src/cli/: options.dart  options.g.dart  target_os_type.dart  vosk_cli.dart
linux/: CMakeLists.txt  vosk_flutter_plugin.cc
linux/include/vosk_flutter/: vosk_flutter_plugin.h
test/: model_loader_test.dart  speech_service_test.dart  vosk_flutter_plugin_test.dart
windows/: CMakeLists.txt  vosk_flutter_plugin.cpp
windows/include/vosk_flutter/: vosk_flutter_plugin.h
(+8 files in other folders)
